<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SilentSuite</string>
    <string name="account_type" translatable="false">io.silentsuite.android</string>
    <string name="account_type_address_book" translatable="false">io.silentsuite.android.address_book</string>
    <string name="account_title_address_book">SilentSuite Address book</string>
    <string name="address_books_authority" translatable="false">io.silentsuite.android.addressbooks</string>
    <string name="address_books_authority_title">Address books</string>
    <string name="help">Help</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="please_wait">Please wait…</string>
    <string name="send">Send</string>
    <string name="create">Create</string>
    <string name="skip">Skip</string>
    <string name="retry">Retry</string>
    <string name="notification_channel_crash_reports">Crash Reports</string>
    <string name="notification_channel_debugging">Debugging</string>
    <string name="notification_channel_general">Other important messages</string>
    <string name="notification_channel_sync">Synchronization</string>
    <string name="notification_channel_sync_errors">Synchronization errors</string>
    <string name="notification_channel_sync_errors_desc">Important errors which stop synchronization like unexpected server replies</string>
    <string name="notification_channel_sync_warnings">Synchronization warnings</string>
    <string name="notification_channel_sync_warnings_desc">Non-fatal synchronization problems like dismissed changes of read-only collections</string>
    <string name="notification_channel_sync_status">Status messages</string>
    <string name="notification_channel_sync_status_desc">Informational status messages like the sync change summary</string>
    <string name="crash_title">SilentSuite has crashed!</string>
    <string name="crash_message">Please send stack trace to developers.</string>
    <string name="crash_email_body">If possible, please include any other relevant information such as what you did to trigger this error.</string>
    <string name="startup_battery_optimization">Battery Optimization</string>
    <string name="startup_battery_optimization_message">Android may disable/reduce SilentSuite synchronization after a few days. To prevent this, turn off battery optimization.</string>
    <string name="startup_battery_optimization_disable">Turn off for SilentSuite</string>
    <string name="startup_dont_show_again">Don\'t show again</string>
    <string name="startup_development_version">SilentSuite Preview Release</string>
    <string name="startup_development_version_message">This is a development version of SilentSuite. Be aware that things may not work as expected. Please give us constructive feedback to improve SilentSuite.</string>
    <string name="startup_development_version_give_feedback">Give feedback</string>
    <string name="startup_vendor_specific_bugs">Potential Vendor Bugs</string>
    <string name="startup_vendor_specific_bugs_message">SilentSuite has detected you are using an Android version that may contain vendor specific bugs.\nPlease take a look at the FAQ for more information.</string>
    <string name="startup_vendor_specific_bugs_open_faq">Open FAQ</string>
    <string name="about_license_terms">License terms</string>
    <string name="about_license_info_no_warranty">This program comes with ABSOLUTELY NO WARRANTY. It is free software, and you are welcome to redistribute it under certain conditions.</string>
    <string name="logging_file_logging">SilentSuite file logging is ON</string>
    <string name="logging_to_external_storage">Logging to external storage: %s</string>
    <string name="logging_to_external_storage_warning">Disabling will delete logs</string>
    <string name="logging_couldnt_create_file">Couldn\'t create external log file: %s</string>
    <string name="logging_no_external_storage">External storage not found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_subtitle">End-to-end encrypted sync</string>
    <string name="navigation_drawer_about">About / License</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_external_links">silentsuite.io</string>
    <string name="navigation_drawer_website">silentsuite.io</string>
    <string name="navigation_drawer_webapp">app.silentsuite.io</string>
    <string name="navigation_drawer_guide">docs.silentsuite.io</string>
    <string name="navigation_drawer_website_label">Website</string>
    <string name="navigation_drawer_webapp_label">Web App</string>
    <string name="navigation_drawer_guide_label">Documentation</string>
    <string name="navigation_drawer_add_account">Add account</string>
    <string name="navigation_drawer_logout">Sign out</string>
    <string name="navigation_drawer_sync_overview">Sync overview</string>
    <string name="navigation_drawer_help_about">Help &amp; about</string>
    <string name="app_settings_theme">Theme</string>
    <string name="app_settings_user_interface">User interface</string>
    <string name="app_settings_notification_settings">Notification settings</string>
    <string name="app_settings_notification_settings_summary">Manage notification channels and their settings</string>
    <string name="app_settings_reset_hints">Reset hints</string>
    <string name="app_settings_reset_hints_summary">Re-enables hints which have been dismissed previously</string>
    <string name="app_settings_prefer_tasksorg">Prefer Tasks.org tasks provider</string>
    <string name="app_settings_prefer_tasksorg_on">Will sync tasks with Tasks.org if available</string>
    <string name="app_settings_prefer_tasksorg_off">Will sync tasks with OpenTasks if available</string>
    <string name="app_settings_connection">Connection</string>
    <string name="app_settings_override_proxy">Override proxy settings</string>
    <string name="app_settings_override_proxy_on">Use custom proxy settings</string>
    <string name="app_settings_override_proxy_off">Use system default proxy settings</string>
    <string name="app_settings_override_proxy_host">HTTP proxy host name</string>
    <string name="app_settings_override_proxy_port">HTTP proxy port</string>
    <string name="app_settings_security">Security</string>
    <string name="app_settings_distrust_system_certs">Distrust system certificates</string>
    <string name="app_settings_distrust_system_certs_on">System and user-added CAs won\'t be trusted</string>
    <string name="app_settings_distrust_system_certs_off">System and user-added CAs will be trusted (recommended)</string>
    <string name="app_settings_reset_certificates">Reset (un)trusted certificates</string>
    <string name="app_settings_reset_certificates_summary">Resets trust of all custom certificates</string>
    <string name="app_settings_debug">Debugging</string>
    <string name="app_settings_log_to_external_storage">Log to file</string>
    <string name="app_settings_log_to_external_storage_on">Disable to hide the notification and delete the logs</string>
    <string name="app_settings_log_to_external_storage_off">Enable to save log messages to file</string>
    <string name="app_settings_log_verbose">Verbose logging</string>
    <string name="app_settings_log_verbose_summary">Verbose logs may contain private information</string>
    <string name="app_settings_show_debug_info">Show debug info</string>
    <string name="app_settings_show_debug_info_details">View/share software and configuration details</string>
    <string name="app_settings_force_language">Force Language</string>
    <string name="app_settings_change_notification">Show change notifications</string>
    <string name="account_synchronize_now">Sync now</string>
    <string name="account_show_fingerprint">Verify encryption fingerprint</string>
    <string name="export_data_title">Export data</string>
    <string name="change_journal_title">Recent sync activity</string>
    <string name="tasks_not_showing">Task app needed. Android does not include a built-in task provider. Install Tasks.org or OpenTasks to create and sync tasks on this device.</string>
    <string name="collection_recent_activity_loading">Loading recent activity...</string>
    <string name="invitations_title">Invitations</string>
    <string name="settings_account_dashboard">Account Dashboard</string>
    <string name="settings_encryption">Encryption</string>
    <string name="settings_encryption_password">Encryption Password</string>
    <string name="settings_encryption_password_summary">Change your encryption password</string>
    <string name="settings_sync">Synchronization</string>
    <string name="settings_sync_interval">Sync interval</string>
    <string name="settings_sync_wifi_only">Sync over WiFi only</string>
    <string name="settings_sync_wifi_only_on">Synchronization is restricted to WiFi connections</string>
    <string name="settings_sync_wifi_only_off">Connection type is not taken into consideration</string>
    <string name="settings_sync_wifi_only_ssid">WiFi SSID restriction</string>
    <string name="settings_sync_wifi_only_ssid_message">Enter the name of a WiFi network (SSID) to restrict synchronization to this network, or leave blank for all WiFi connections.</string>
    <string name="post_login_stage_connect">Account</string>
    <string name="post_login_stage_prepare">Android apps</string>
    <string name="post_login_stage_ready">Ready</string>
    <string name="post_login_creating_title">Let\'s repair this setup</string>
    <string name="post_login_creating_body">Account creation was interrupted before setup finished. Remove this incomplete account and sign in again.</string>
    <string name="post_login_setup_continue">Continue setup</string>
    <string name="post_login_skip_for_now">Skip for now</string>
    <string name="post_login_setup_remove_incomplete">Remove and sign in again</string>
    <string name="post_login_setup_done">Open sync overview</string>
    <string name="post_login_setup_retry_inventory">Retry collection recovery</string>
    <string name="post_login_setup_resolve_ambiguity">Resolve account in Android Settings</string>
    <string name="settings_category_account">Account</string>
    <string name="settings_category_account_summary">Account identity and account dashboard</string>
    <string name="settings_category_sync">Sync</string>
    <string name="settings_category_sync_summary">Schedule, network restrictions, and task provider</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_category_notifications_summary">Android notification channels and change alerts</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_appearance_summary">Theme and interface hints</string>
    <string name="settings_category_privacy_security">Privacy and security</string>
    <string name="settings_category_privacy_security_summary">Encryption and local privacy protections</string>
    <string name="settings_category_help">Help and troubleshooting</string>
    <string name="settings_category_help_summary">Advanced connection, certificate, language, and diagnostic options</string>
    <string name="settings_account_current">Current account</string>
    <string name="settings_account_dashboard_summary">Open this account’s encrypted-sync overview</string>
    <string name="settings_privacy_local_title">Local settings</string>
    <string name="settings_privacy_local_summary">Global preferences stay on this device. Sync schedule, Wi-Fi restrictions, setup state, and session data remain scoped to the selected Android account.</string>
</resources>