<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="settings_category_account" android:title="@string/settings_category_account" android:summary="@string/settings_category_account_summary" android:persistent="false" />
    <Preference android:key="settings_category_sync" android:title="@string/settings_category_sync" android:summary="@string/settings_category_sync_summary" android:persistent="false" />
    <Preference android:key="settings_category_notifications" android:title="@string/settings_category_notifications" android:summary="@string/settings_category_notifications_summary" android:persistent="false" />
    <Preference android:key="settings_category_appearance" android:title="@string/settings_category_appearance" android:summary="@string/settings_category_appearance_summary" android:persistent="false" />
    <Preference android:key="settings_category_privacy_security" android:title="@string/settings_category_privacy_security" android:summary="@string/settings_category_privacy_security_summary" android:persistent="false" />
    <Preference android:key="settings_category_help" android:title="@string/settings_category_help" android:summary="@string/settings_category_help_summary" android:persistent="false" />
</PreferenceScreen>
