<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="sync_interval" android:persistent="false" android:title="@string/settings_sync_interval" android:entries="@array/settings_sync_interval_names" android:entryValues="@array/settings_sync_interval_seconds" />
    <SwitchPreferenceCompat android:key="sync_wifi_only" android:persistent="false" android:title="@string/settings_sync_wifi_only" android:summaryOn="@string/settings_sync_wifi_only_on" android:summaryOff="@string/settings_sync_wifi_only_off" />
    <EditTextPreference android:key="sync_wifi_only_ssid" android:persistent="false" android:dependency="sync_wifi_only" android:title="@string/settings_sync_wifi_only_ssid" android:dialogMessage="@string/settings_sync_wifi_only_ssid_message" />
    <SwitchPreferenceCompat android:key="prefer_tasksorg" android:persistent="false" android:title="@string/app_settings_prefer_tasksorg" android:summaryOn="@string/app_settings_prefer_tasksorg_on" android:summaryOff="@string/app_settings_prefer_tasksorg_off" />
</PreferenceScreen>
