<?xml version="1.0" encoding="utf-8"?>
<!-- Modified by Silent Suite -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_destinations_group" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_sync_overview"
            android:icon="@drawable/ic_sync_light"
            android:title="@string/navigation_drawer_sync_overview"/>
        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/ic_people_light"
            android:title="@string/invitations_title"/>
        <item
            android:id="@+id/nav_app_settings"
            android:icon="@drawable/ic_settings_dark"
            android:title="@string/navigation_drawer_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_dark"
            android:title="@string/navigation_drawer_help_about"/>
    </group>

    <group android:id="@+id/nav_sign_out_group" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/navigation_drawer_logout"/>
    </group>

</menu>
