<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2013 – 2016 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="password" android:title="@string/settings_encryption_password" android:summary="@string/settings_encryption_password_summary" android:persistent="false" />
    <Preference android:key="privacy_explanation" android:title="@string/settings_privacy_local_title" android:summary="@string/settings_privacy_local_summary" android:selectable="false" android:persistent="false" />
</PreferenceScreen>
