<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/spacing_24">

        <TextView
            android:id="@+id/setup_stage_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/touch_target_min"
            android:gravity="center_vertical"
            android:text="@string/post_login_stage_connect"
            android:textAppearance="@style/TextAppearance.AppTheme.FirstRun.Body" />

        <TextView
            android:id="@+id/setup_stage_prepare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/touch_target_min"
            android:gravity="center_vertical"
            android:text="@string/post_login_stage_prepare"
            android:textAppearance="@style/TextAppearance.AppTheme.FirstRun.Body" />

        <TextView
            android:id="@+id/setup_stage_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/touch_target_min"
            android:gravity="center_vertical"
            android:text="@string/post_login_stage_ready"
            android:textAppearance="@style/TextAppearance.AppTheme.FirstRun.Body" />

        <TextView
            android:id="@+id/setup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:accessibilityLiveRegion="polite"
            android:text="@string/post_login_creating_title"
            android:textAppearance="@style/TextAppearance.AppTheme.FirstRun.Title" />

        <TextView
            android:id="@+id/setup_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/post_login_creating_body"
            android:textAppearance="@style/TextAppearance.AppTheme.FirstRun.Body" />

        <TextView
            android:id="@+id/setup_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:visibility="gone" />

        <Button
            android:id="@+id/setup_continue_limited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/post_login_setup_continue" />

        <Button
            android:id="@+id/setup_skip_integrations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/post_login_skip_for_now" />

        <Button
            android:id="@+id/setup_remove_incomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/post_login_setup_remove_incomplete" />

        <Button
            android:id="@+id/setup_retry_inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/post_login_setup_retry_inventory" />

        <Button
            android:id="@+id/setup_resolve_ambiguity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/post_login_setup_resolve_ambiguity" />

        <Button
            android:id="@+id/setup_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/post_login_setup_done" />
    </LinearLayout>
</ScrollView>
