<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 – 2015 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="account_identity" android:title="@string/settings_account_current" android:selectable="false" android:persistent="false" />
    <Preference android:key="manage_account" android:title="@string/settings_account_dashboard" android:summary="@string/settings_account_dashboard_summary" android:persistent="false" />
</PreferenceScreen>
