<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2013 – 2016 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="notification_settings" android:title="@string/app_settings_notification_settings" android:summary="@string/app_settings_notification_settings_summary" android:persistent="false" />
    <SwitchPreferenceCompat android:key="show_change_notification" android:title="@string/app_settings_change_notification" android:persistent="false" />
</PreferenceScreen>
