<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2013 – 2016 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="theme_mode" android:title="@string/app_settings_theme" android:entries="@array/theme_mode_names" android:entryValues="@array/theme_mode_values" android:persistent="false" />
    <Preference android:key="reset_hints" android:title="@string/app_settings_reset_hints" android:summary="@string/app_settings_reset_hints_summary" android:persistent="false" />
</PreferenceScreen>
