<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/collection_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_16"
            android:paddingEnd="@dimen/spacing_16"
            android:text="@string/change_journal_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <TextView
            android:id="@+id/tasks_not_showing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:paddingStart="@dimen/spacing_16"
            android:paddingEnd="@dimen/spacing_16"
            android:text="@string/tasks_not_showing"
            android:textAppearance="@style/TextAppearance.AppTheme.Material3.Status"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_16">

            <TextView
                android:id="@+id/stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:accessibilityLiveRegion="polite"
                android:text="@string/collection_recent_activity_loading"
                android:textAppearance="@style/TextAppearance.AppTheme.Material3.Body" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_8"
                android:importantForAccessibility="no" />
        </LinearLayout>

        <fragment
            android:id="@+id/list_entries_container"
            android:name="io.silentsuite.sync.ui.etebase.ListEntriesFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
